# key-light-control

./: Cargo.toml  LICENSE  README.md  Tauri.toml
.github/workflows/: release.yml
src/: background.rs  consts.rs  main.rs  main.rs.bcp  settings.rs  ui.rs  utils.rs
src/utils/: camera.rs  icon.rs  light.rs
ui/: app-window.slint
