[package]
name = "gui-app"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = "symbols"

[dependencies]
winreg = "0.55.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.5"
eframe = { git = "https://github.com/emilk/egui.git", branch = "main" }
egui_extras = { version = "0.31.1", features = ["default", "image"] }
winit = "0.30.11"
tray-icon = "0.20.1"
windows = "0.61.1"
image = "0.25.6"

